TEST_PROGRAMS/INVALID/04/68.go
package main

func main() {
    // Non lvalue in assignment
    (2 + 2) += 2
}
